infra/istio/overlays/gateway/destinationrule-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gateway
  namespace: sis
spec:
  host: gateway
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
