infra/istio/overlays/gateway/virtualservice-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway
  namespace: sis
spec:
  hosts:
  - gateway
  http:
  - route:
    - destination:
        host: gateway
        port:
          number: 3000
