infra/istio/overlays/gateway/authorizationpolicy-gateway.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: gateway-restrict-internal
  namespace: sis
spec:
  selector:
    matchLabels:
      app: gateway
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/sis/sa/identity-sa"
        - "cluster.local/ns/sis/sa/gateway-sa"
